--- a/ForeachLoop/ForeachLoop.csproj
+++ b/ForeachLoop/ForeachLoop.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>C:\Users\Ilitzy\FastTrackIt\Lab6\ForeachLoop\ForeachLoop\ForeachLoop.xml</DocumentationFile>
+  </PropertyGroup>
+
 </Project>
